package com.job.designpattern.abstractfactory;

public interface IUser {
    void insert(User user);

    User get(String id);
}
